kubedeploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production-clusterissuer
  name: APPNAME
spec:
  rules:
    - host: oidc-demo.scratch.io-multi.de
      http:
        paths:
          - backend:
              service:
                name: APPNAME
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - oidc-demo.scratch.io-multi.de
      secretName: oidc-demo-scratch-io-multi-de-tls-prod
status:
  loadBalancer: {}
